# AGENT-E

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  agent-orchestrator.js  agent.js  agentx.py  bugs.md  chat.js  check_backend.py  cleanup.ps1  cli.py  debug_menu.py  debug_registry.py  docker-compose.yml  hyper-expert-orchestrator.js  knowledge-updater.js  package-lock.json  package.json  pyproject.toml  requirements.txt  run-support.bat  run_agentx.py  setup.py  simple_menu.py  support.py  task-context.md  test-agent-system.js  test_backend.py  test_imports.py  test_imports_fixed.py  test_menu.py  test_models.py  vitest.config.js
.AGENT-X/: current-task.json
.agent-e/: current-task.json
.devcontainer/: devcontainer.json
agent/: __init__.py  agent.py  tools.py  workflow.py
agentx/: __init__.py  orchestrator.py
agentx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/: __init__.py  main.py  menu.py
docs/: CONTRIBUTING.md  EXPERT_SYSTEM.md  I18N_GUIDE.md  NVIDIA_MODELS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  ROADMAP.md  USAGE.md  api-chat-nvidia-oss20b.md  api-response-nvidia-oss20b.md
examples/: agent_demo.py  nvidia_model_example.py
i18ntk-reports/: analysis-de.txt  analysis-es.txt  analysis-fr.txt  analysis-ru.txt  sizing-analysis-2025-08-15T00-20-43-034Z.json  sizing-analysis-2025-08-15T00-20-43-034Z.txt
knowledge/: last-update.json
main/: agent-e.js  agent.js  agentx-i18n.js  agentx-ui.js  multi-agent.js
models/: README.md  __init__.py  registry.py
prompts/: master-agent.md
(+167 files in other folders)
